--- a/plugin.xml
+++ b/plugin.xml
@@ -8,12 +8,12 @@
 
     <config-file parent="/*" target="res/xml/config.xml">
       <feature name="BlurPrivacyScreenPlugin">
-        <param name="android-package" value="com.s3rious.blurprivacyscreen.BlurPrivacyScreenPlugin"/>
+        <param name="android-package" value="com.llamalox.blurprivacyscreen.BlurPrivacyScreenPlugin"/>
         <param name="onload" value="true" />
       </feature>
     </config-file>
 
-		<source-file src="src/android/BlurPrivacyScreenPlugin.java" target-dir="src/com/s3rious/blurprivacyscreen"/>
+		<source-file src="src/android/BlurPrivacyScreenPlugin.java" target-dir="src/com/llamalox/blurprivacyscreen"/>
 	</platform>
 
 	<platform name="ios">
