--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-blur-privacy-screen-plugin" version="1.0.2">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-blur-privacy-screen-plugin" version="0.0.1>
 
 	<name>BlurPrivacyScreenPlugin</name>
 	<description>Secures your app sensitive data by bluring main view in task switchers on iOS (and just hiding it on Android)</description>
@@ -14,17 +14,5 @@
     </config-file>
 
 		<source-file src="src/android/BlurPrivacyScreenPlugin.java" target-dir="src/com/llamalox/blurprivacyscreen"/>
-	</platform>
-
-	<platform name="ios">
-
-    <config-file parent="/*" target="config.xml">
-      <feature name="BlurPrivacyScreenPlugin">
-        <param name="ios-package" value="BlurPrivacyScreenPlugin"/>
-        <param name="onload" value="true" />
-      </feature>
-    </config-file>
-
-		<source-file src="src/ios/BlurPrivacyScreenPlugin.m"/>
 	</platform>
 </plugin>
